--- a/src/mylangchain_app/02Ollama/013_Ollama_DeepSeek-r1_Qwen3연동.ipynb
+++ b/src/mylangchain_app/02Ollama/013_Ollama_DeepSeek-r1_Qwen3연동.ipynb
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -487,48 +487,30 @@
      "output_type": "stream",
      "text": [
       "<think>\n",
-      "Okay, let's see. The user is asking which is bigger between 9.9 and 9.11. Hmm, I need to figure this out step by step.\n",
+      "Okay, let's see. The user is asking which is bigger between 9.9 and 9.11. Hmm, both numbers start with 9, so the whole numbers are the same. But the decimals are different. I need to compare the tenths place first. \n",
       "\n",
-      "First, both numbers start with 9, so the whole number part is the same. That means I need to look at the decimal parts. \n",
+      "Wait, 9.9 is the same as 9.90 when we add a zero. So, 9.90 versus 9.11. Now, comparing the tenths place: 9 vs 1. Since 9 is bigger than 1, 9.90 is larger. So, 9.9 is bigger than 9.11. \n",
       "\n",
-      "So, 9.9 is the same as 9.90 when adding a zero. Then comparing 9.90 and 9.11. \n",
+      "I should make sure I didn't mix up the decimal places. The first number has a 9 in the tenths place, and the second has a 1. Yep, that's right. So the conclusion is 9.9 is larger. \n",
       "\n",
-      "Breaking it down, the tenths place in 9.90 is 9, and in 9.11 it's 1. Since 9 is greater than 1, 9.90 is larger. \n",
-      "\n",
-      "Wait, but the user wrote 9.11. So even though 9.11 has a 1 in the tenths place, the 9 in the tenths place of 9.90 makes it bigger. \n",
-      "\n",
-      "So the conclusion is 9.9 is larger than 9.11. I need to make sure I explain this clearly without using the word \"exploration\" or any process steps. Just state the comparison directly.\n",
+      "I need to present this clearly without using markdown. Keep it simple and direct. Maybe start by stating the whole numbers are equal, then focus on the decimals. Highlight the key point about the tenths place. Make sure the answer is straightforward.\n",
       "</think>\n",
       "\n",
-      "9.9와 9.11 중 더 큰 수는 **9.9**입니다.  \n",
-      "\n",
-      "두 수는 자연수 부분(9)이 같으므로, 소수 부분을 비교해야 합니다.  \n",
-      "9.9는 9.90으로 바꾸어보면, 9.90와 9.11을 비교하면, 소수점 첫 번째 자리에서 9가 1보다 큽니다. 따라서 9.90은 9.11보다 큰 수입니다.  \n",
-      "\n",
-      "즉, **9.9는 9.11보다 더 큰 수입니다**.\n",
-      "{'question': '9.9와 9.11 중 무엇이 더 큰가요?', 'thinking': \"<think>\\nFirst, I need to compare the two numbers: 9.9 and 9.11.\\n\\nBoth numbers have the same whole number part, which is 9.\\n\\nTo make a fair comparison, I'll align them by adding an extra decimal place to 9.9, making it 9.90.\\n\\nNow, both numbers are 9.90 and 9.11.\\n\\nComparing each digit from left to right:\\n\\n- The whole number part is equal (both have 9).\\n- In the tenths place, 9 in 9.90 is greater than 1 in 9.11.\\n  \\nSince 9.90 has a higher value in the tenths place, it is larger than 9.11.\\n\\nTherefore, 9.9 is greater than 9.11.\\n\", 'answer': '<think>\\nOkay, let\\'s see. The user is asking which is bigger between 9.9 and 9.11. Hmm, I need to figure this out step by step.\\n\\nFirst, both numbers start with 9, so the whole number part is the same. That means I need to look at the decimal parts. \\n\\nSo, 9.9 is the same as 9.90 when adding a zero. Then comparing 9.90 and 9.11. \\n\\nBreaking it down, the tenths place in 9.90 is 9, and in 9.11 it\\'s 1. Since 9 is greater than 1, 9.90 is larger. \\n\\nWait, but the user wrote 9.11. So even though 9.11 has a 1 in the tenths place, the 9 in the tenths place of 9.90 makes it bigger. \\n\\nSo the conclusion is 9.9 is larger than 9.11. I need to make sure I explain this clearly without using the word \"exploration\" or any process steps. Just state the comparison directly.\\n</think>\\n\\n9.9와 9.11 중 더 큰 수는 **9.9**입니다.  \\n\\n두 수는 자연수 부분(9)이 같으므로, 소수 부분을 비교해야 합니다.  \\n9.9는 9.90으로 바꾸어보면, 9.90와 9.11을 비교하면, 소수점 첫 번째 자리에서 9가 1보다 큽니다. 따라서 9.90은 9.11보다 큰 수입니다.  \\n\\n즉, **9.9는 9.11보다 더 큰 수입니다**.'}\n",
+      "9.9와 9.11 중 9.9는 더 큰 수입니다. 두 수는 전부 9를 가지며, 반면 9.9는 9.11보다 0.09 더 큰 값이 있습니다. 구체적으로, 9.9는 9.90과 같은 형태로 볼 수 있으며, 9.11은 9.11로 비교할 때, 9.90의 9가 9.11의 1보다 더 큰 값이므로 9.9이 더 클 수 있습니다. 이로 인해 9.9는 9.11보다 크습니다.\n",
+      "{'question': '9.9와 9.11 중 무엇이 더 큰가요?', 'thinking': \"<think>\\nFirst, I need to compare the two numbers: 9.9 and 9.11.\\n\\nBoth numbers have the same whole number part, which is 9.\\n\\nTo make a fair comparison, I'll align them by adding an extra decimal place to 9.9, making it 9.90.\\n\\nNow, both numbers are 9.90 and 9.11.\\n\\nComparing each digit from left to right:\\n\\n- The whole number part is equal (both have 9).\\n- In the tenths place, 9 in 9.90 is greater than 1 in 9.11.\\n  \\nSince 9.90 has a higher value in the tenths place, it is larger than 9.11.\\n\\nTherefore, 9.9 is greater than 9.11.\\n\", 'answer': \"<think>\\nOkay, let's see. The user is asking which is bigger between 9.9 and 9.11. Hmm, both numbers start with 9, so the whole numbers are the same. But the decimals are different. I need to compare the tenths place first. \\n\\nWait, 9.9 is the same as 9.90 when we add a zero. So, 9.90 versus 9.11. Now, comparing the tenths place: 9 vs 1. Since 9 is bigger than 1, 9.90 is larger. So, 9.9 is bigger than 9.11. \\n\\nI should make sure I didn't mix up the decimal places. The first number has a 9 in the tenths place, and the second has a 1. Yep, that's right. So the conclusion is 9.9 is larger. \\n\\nI need to present this clearly without using markdown. Keep it simple and direct. Maybe start by stating the whole numbers are equal, then focus on the decimals. Highlight the key point about the tenths place. Make sure the answer is straightforward.\\n</think>\\n\\n9.9와 9.11 중 9.9는 더 큰 수입니다. 두 수는 전부 9를 가지며, 반면 9.9는 9.11보다 0.09 더 큰 값이 있습니다. 구체적으로, 9.9는 9.90과 같은 형태로 볼 수 있으며, 9.11은 9.11로 비교할 때, 9.90의 9가 9.11의 1보다 더 큰 값이므로 9.9이 더 클 수 있습니다. 이로 인해 9.9는 9.11보다 크습니다.\"}\n",
       "==> 생성된 답변: \n",
       "\n",
       "<think>\n",
-      "Okay, let's see. The user is asking which is bigger between 9.9 and 9.11. Hmm, I need to figure this out step by step.\n",
+      "Okay, let's see. The user is asking which is bigger between 9.9 and 9.11. Hmm, both numbers start with 9, so the whole numbers are the same. But the decimals are different. I need to compare the tenths place first. \n",
       "\n",
-      "First, both numbers start with 9, so the whole number part is the same. That means I need to look at the decimal parts. \n",
+      "Wait, 9.9 is the same as 9.90 when we add a zero. So, 9.90 versus 9.11. Now, comparing the tenths place: 9 vs 1. Since 9 is bigger than 1, 9.90 is larger. So, 9.9 is bigger than 9.11. \n",
       "\n",
-      "So, 9.9 is the same as 9.90 when adding a zero. Then comparing 9.90 and 9.11. \n",
+      "I should make sure I didn't mix up the decimal places. The first number has a 9 in the tenths place, and the second has a 1. Yep, that's right. So the conclusion is 9.9 is larger. \n",
       "\n",
-      "Breaking it down, the tenths place in 9.90 is 9, and in 9.11 it's 1. Since 9 is greater than 1, 9.90 is larger. \n",
-      "\n",
-      "Wait, but the user wrote 9.11. So even though 9.11 has a 1 in the tenths place, the 9 in the tenths place of 9.90 makes it bigger. \n",
-      "\n",
-      "So the conclusion is 9.9 is larger than 9.11. I need to make sure I explain this clearly without using the word \"exploration\" or any process steps. Just state the comparison directly.\n",
+      "I need to present this clearly without using markdown. Keep it simple and direct. Maybe start by stating the whole numbers are equal, then focus on the decimals. Highlight the key point about the tenths place. Make sure the answer is straightforward.\n",
       "</think>\n",
       "\n",
-      "9.9와 9.11 중 더 큰 수는 **9.9**입니다.  \n",
-      "\n",
-      "두 수는 자연수 부분(9)이 같으므로, 소수 부분을 비교해야 합니다.  \n",
-      "9.9는 9.90으로 바꾸어보면, 9.90와 9.11을 비교하면, 소수점 첫 번째 자리에서 9가 1보다 큽니다. 따라서 9.90은 9.11보다 큰 수입니다.  \n",
-      "\n",
-      "즉, **9.9는 9.11보다 더 큰 수입니다**.\n"
+      "9.9와 9.11 중 9.9는 더 큰 수입니다. 두 수는 전부 9를 가지며, 반면 9.9는 9.11보다 0.09 더 큰 값이 있습니다. 구체적으로, 9.9는 9.90과 같은 형태로 볼 수 있으며, 9.11은 9.11로 비교할 때, 9.90의 9가 9.11의 1보다 더 큰 값이므로 9.9이 더 클 수 있습니다. 이로 인해 9.9는 9.11보다 크습니다.\n"
      ]
     }
    ],
@@ -739,7 +721,53 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\user\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\mylangchain-app-SBe-Yh6W-py3.12\\Lib\\site-packages\\gradio\\chat_interface.py:348: UserWarning: The 'tuples' format for chatbot messages is deprecated and will be removed in a future version of Gradio. Please set type='messages' instead, which uses openai-style 'role' and 'content' keys.\n",
+      "  self.chatbot = Chatbot(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7861\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[DEBUG] 입력 질문: 파이썬이란  무엇인가요?\n",
+      "[DEBUG] 질문 타입: <class 'str'>\n",
+      "[DEBUG] 추론 결과 타입: <class 'str'>\n",
+      "[DEBUG] 추론 결과 길이: 6962\n",
+      "[DEBUG] 추론 결과 미리보기: <think>\n",
+      "Okay, so I'm trying to understand what Python is. I've heard it's a programming language, but I'm not entirely sure how it works or why someone would use it. Let me think about this step by st...\n",
+      "[DEBUG] generate 함수 - 질문: 파이썬이란  무엇인가요?\n",
+      "[DEBUG] generate 함수 - 추론 길이: 6962\n",
+      "[DEBUG] generate 함수 - 추론 미리보기: <think>\n",
+      "Okay, so I'm trying to understand what Python is. I've heard it's a programming language, but I'm not entirely sure how it works or why someone would use it. Let me think about this step by st...\n",
+      "[DEBUG] 프롬프트 메시지 생성 완료\n"
+     ]
+    }
+   ],
    "source": [
     "import gradio as gr\n",
     "import os\n",
@@ -887,11 +915,12 @@
     "    result = graph.invoke(inputs)\n",
     "    return result[\"answer\"]\n",
     "\n",
-    "iface = gr.ChatInterface(fn=chatbot_interface, title=\"AI 챗봇\", description=\"질문을 입력하면 AI가 답변을 제공합니다.\")\n",
+    "#iface = gr.ChatInterface(fn=chatbot_interface, title=\"AI 챗봇\", description=\"질문을 입력하면 AI가 답변을 제공합니다.\")\n",
     "\n",
     "# Gradio 인터페이스 설정\n",
     "def launch_gradio():\n",
-    "    iface = gr.Interface(fn=chatbot_interface, inputs=\"text\", outputs=\"text\", title=\"AI 챗봇\", description=\"질문을 입력하면 AI가 답변을 제공합니다.\")\n",
+    "    #iface = gr.Interface(fn=chatbot_interface, inputs=\"text\", outputs=\"text\", title=\"AI 챗봇\", description=\"질문을 입력하면 AI가 답변을 제공합니다.\")\n",
+    "    iface = gr.ChatInterface(fn=chatbot_interface, title=\"AI 챗봇\", description=\"질문을 입력하면 AI가 답변을 제공합니다.\")\n",
     "    iface.launch()\n",
     "\n",
     "if __name__ == \"__main__\":\n",
