--- a/src/mylangchain_app/00Basic/004_Model_Parameter.ipynb
+++ b/src/mylangchain_app/00Basic/004_Model_Parameter.ipynb
@@ -209,7 +209,7 @@
     "                             # → 기존 패턴을 벗어나지 않고 일관성을 유지합니다.\n",
     "    frequency_penalty=-0.3,  # 음수 값(-0.3): 자주 등장한 단어에 대한 '벌칙'을 줄여, 동일한 표현의 반복을 허용합니다.\n",
     "                             # → 응답의 일관성이 높아지고, 핵심 주제에서 벗어나지 않습니다.\n",
-    "    max_tokens=200,          # 응답의 최대 길이를 제한합니다. 보수적인 답변에 적합합니다.\n",
+    "    max_tokens=200,          # 응답의 최대 길이를 제한합니다. \n",
     "    top_p=0.3                # 낮은 값(0.3): 확률이 높은 상위 30% 토큰(단어)만 고려합니다.\n",
     "                             # → 모델의 '선택지'를 극도로 제한하여 예측 가능한 단어만 사용합니다.\n",
     ")\n",
@@ -364,7 +364,7 @@
     "#  모델 파라미터 (Before: 기본적인 추천 / After: 맞춤형 세부 정보 추가)\n",
     "before_params = {\n",
     "    \"temperature\": 0.7,         # 랜덤성을 적절히 유지 (다양한 답변 유도)\n",
-    "    \"max_tokens\": 300,          # 응답 길이를 적절히 조절\n",
+    "    \"max_tokens\": 800,          # 응답 길이를 적절히 조절\n",
     "    \"frequency_penalty\": 0.5,   # 반복 단어 억제\n",
     "    \"presence_penalty\": 0.5,    # 새로운 단어 포함 장려\n",
     "}\n",
@@ -388,7 +388,8 @@
     "#after_model = ChatOpenAI(model=\"gpt-3.5-turbo-0125\", **after_params)\n",
     "after_model = ChatOpenAI(\n",
     "    base_url=\"https://api.groq.com/openai/v1\",  # Groq API 엔드포인트\n",
-    "    model=\"meta-llama/llama-4-scout-17b-16e-instruct\",\n",
+    "    #model=\"meta-llama/llama-4-scout-17b-16e-instruct\",\n",
+    "    model=\"moonshotai/kimi-k2-instruct-0905\",\n",
     "    **after_params\n",
     ")\n",
     "\n",
@@ -435,9 +436,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " [Before] 기본 max_tokens=150 (기본 답변)\n",
+      "### **초보자를 위한 Python 학습 단계**\n",
+      "\n",
+      "Python 프로그래밍을 배우고자 하는 초보자를 위한 추천 학습 단계를 순서대로 설명해 드리겠습니다.\n",
+      "\n",
+      "#### **1. Python의 기초 이해하기**\n",
+      "\n",
+      "*   Python이란 무엇인지, Python 프로그래밍 언어의 특징과 장점을 이해하는 것부터 시작하세요. \n",
+      "*   Python이 처음인 경우, Python의 공식 웹사이트를 방문해서 Python에 대한 전반적인 정보를 얻는 것이 좋습니다. \n",
+      "*   예를 들어, Python의 공식 웹사이트([https://www.python.org/](https://www.python.org/))에는 Python에 대한 소개, 특징 및 다운로드 링크가 있습니다.\n",
+      "\n",
+      "#### **2. Python 설치 및 설정**\n",
+      "\n",
+      "*   Python을 설치하고 설정하는 단계입니다\n",
+      "\n",
+      "====================================================================================================\n",
+      "\n",
+      " [After] max_tokens=150, stop=['.'] (첫 번째 마침표에서 응답 중단)\n",
+      "*   **필요한 툴 준비하기**: Python 프로그래밍을 시작하는 단계입니다\n",
+      "\n",
+      "====================================================================================================\n",
+      "\n",
+      " [After] max_tokens=150, temperature=0.8 (창의적인 답변)\n",
+      "1.  **Python의 기본 개념 이해하기** *   **변수와 자료형**: 변수 선언, 기본 자료형(숫자, 문자열, 리스트, 딕셔너리 등) *   **연산자**: 산술 연산자, 비교 연산자, 논리 연산자 *   **제어 구조**: 조건문(if/else), 반복문(for/while), 예외 처리 *   **함수**: 함수 정의, 함수 호출 *   **모듈**: Python의 표준 라이브러리, 외부 라이브러리 *   **방법**: 온라인 강의, 책, 튜토리얼을 통해 기본적인 개념을 배울 수 있습니다. *   **팁**: 이론적인 부분뿐만 아니라 예제를 함께 제공된 자료\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
@@ -502,7 +535,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "chatbot-0lCeHk3W-py3.12",
+   "display_name": "mylangchain-app-SBe-Yh6W-py3.12",
    "language": "python",
    "name": "python3"
   },
