--- a/src/mylangchain_app/연습문제/problem1-1_기본체인.ipynb
+++ b/src/mylangchain_app/연습문제/problem1-1_기본체인.ipynb
@@ -21,20 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 환경 변수 설정\n",
     "from dotenv import load_dotenv\n",
@@ -43,12 +32,12 @@
     "# .env 파일에서 API 키 로드\n",
     "load_dotenv()\n",
     "\n",
-    "#OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")"
+    "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,49 +111,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AI 요리사 - 재료 기반 요리 추천\n",
-      "=====================================\n",
-      "\n",
-      "입력 재료: 계란, 밥, 김치\n",
-      "\n",
-      "AI 요리사의 추천:\n",
-      "### 추천 요리: 김치밥\n",
-      "\n",
-      "#### 필요한 재료:\n",
-      "- 계란\n",
-      "- 밥\n",
-      "- 김치\n",
-      "\n",
-      "#### 단계별 조리법:\n",
-      "\n",
-      "1. **김치 준비하기**: 김치를 잘게 썰어주세요. 크기는 입맛에 따라 조절하시면 됩니다. 너무 크지도 너무 작지도 않게 썰어주면 좋아요.\n",
-      "\n",
-      "2. **밥 준비하기**: 밥을 준비합니다. 밥은 전날 남은 밥이나 갓 지은 밥을 사용해도 좋아요. 밥이 너무 촉촉하거나 너무 딱딱하지 않도록 적당한 습도를 유지해주세요.\n",
-      "\n",
-      "3. **계란 준비하기**: 계란을 깨뜨려서 그릇에 담아주세요. 계란을 풀어서 소금과 후추로 간을 해주세요.\n",
-      "\n",
-      "4. **김치밥 만들기**: 팬에 기름을 두르고 썰어 놓은 김치를 넣어 볶아주세요. 김치가 약간 노릇해질 때까지 볶아주세요.\n",
-      "\n",
-      "5. **계란과 밥 추가하기**: 볶아진 김치에 풀어놓은 계란을 부어주세요. 계란이 반쯤 익으면 밥을 넣어주세요. 모든 재료가 잘 섞이도록 볶아주세요.\n",
-      "\n",
-      "6. **마무리**: 모든 재료가 잘 섞이면 맛있는 김치밥이 완성됩니다! 간을 보고 필요하다면 소금이나 후추로 조절해주세요.\n",
-      "\n",
-      "#### 조리 팁:\n",
-      "- 김치를 잘게 썰면 더 맛있게 먹을 수 있어요.\n",
-      "- 계란을 넣을 때는 약불로 조절해서 계란이 타지 않도록 주의해주세요.\n",
-      "- 밥이 너무 촉촉하면 팬에 기름을 조금 더 두르고 볶아주면 좋아요.\n",
-      "\n",
-      "이제 맛있는 김치밥을 만들어보세요!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 5. 테스트 실행\n",
     "try:\n",
@@ -190,70 +139,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "다른 재료로 테스트:\n",
-      "===================\n",
-      "\n",
-      "입력 재료: 토마토, 양파, 치즈\n",
-      "\n",
-      "AI 요리사의 추천:\n",
-      "맛있는 요리를 만들 준비가 되었습니다! 오늘은 토마토, 양파, 치즈로 만들 수 있는 '토마토 치즈 파스타'를 추천해 드릴게요. 이 요리는 간단하면서도 맛이 뛰어나고, 준비한 재료들을 활용할 수 있어요.\n",
-      "\n",
-      "### 추천 요리명\n",
-      "토마토 치즈 파스타\n",
-      "\n",
-      "### 필요한 재료 목록\n",
-      "- 파스타 (스파게티 또는 펜네 등)\n",
-      "- 토마토\n",
-      "- 양파\n",
-      "- 치즈 (모짜렐라 치즈 또는 체다 치즈)\n",
-      "- 올리브 오일\n",
-      "- 소금\n",
-      "- 후추\n",
-      "- 마늘 (선택 사항)\n",
-      "- 신선한 바질 (선택 사항)\n",
-      "\n",
-      "### 단계별 조리법\n",
-      "1. **파스타 삶기**: \n",
-      "   - 큰 냄비에 물을 많이 넣고 소금을 한 숟가락 정도 넣어주세요. \n",
-      "   - 물이 끓으면 파스타를 넣고 패키지에 적힌 시간만큼 삶아주세요. \n",
-      "   - 삶은 파스타는 물에서 건져내어 따로 놓아주세요.\n",
-      "\n",
-      "2. **토마토와 양파 준비하기**:\n",
-      "   - 토마토는 깨끗이 씻고, 꼭지를 제거한 뒤에 잘게 썰어주세요.\n",
-      "   - 양파는 껍질을 벗기고 잘게 썰어주세요.\n",
-      "\n",
-      "3. **소스 만들기**:\n",
-      "   - 팬에 올리브 오일을 두르고 다진 마늘을 넣어 볶아주세요 (마늘을 사용하지 않으면 생략).\n",
-      "   - 잘게 썬 양파를 넣고 양파가 투명해질 때까지 볶아주세요.\n",
-      "   - 썬 토마토를 넣고 5분 정도 볶아주세요. 소금과 후추로 간을 맞춰주세요.\n",
-      "\n",
-      "4. **파스타와 소스 합치기**:\n",
-      "   - 삶은 파스타를 팬에 넣고, 토마토 소스와 잘 섞어주세요.\n",
-      "\n",
-      "5. **치즈 추가하기**:\n",
-      "   - 모짜렐라 치즈 또는 체다 치즈를 파스타 위에 뿌려주세요.\n",
-      "   - 오븐에 넣고 치즈가 녹고 황금빛이 될 때까지 구워주세요 (약 10분).\n",
-      "\n",
-      "6. **마무리**:\n",
-      "   - 신선한 바질을 잘게 썰어 파스타 위에 올려주세요 (선택 사항).\n",
-      "   - 따뜻하게 바로 서빙하세요!\n",
-      "\n",
-      "### 조리 팁\n",
-      "- 파스타를 삶은 물은 소스를 만들 때 조금씩 추가하면 더 크리미한 소스를 만들 수 있어요.\n",
-      "- 치즈는 여러 종류를 섞어 사용하면 더 깊은 맛을 낼 수 있어요.\n",
-      "- 토마토는 신선한 것을 사용하면 더 맛있어요.\n",
-      "\n",
-      "맛있는 '토마토 치즈 파스타'를 즐기시길 바래요! 요리하시면서 궁금한 점이 있으면 언제든지 물어봐 주세요.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 추가 테스트 - 다른 재료로 실행\n",
     "other_ingredients = \"토마토, 양파, 치즈\"\n",
