--- a/src/mylangchain_app/00Basic/005_ChatUpstage 활용.ipynb
+++ b/src/mylangchain_app/00Basic/005_ChatUpstage 활용.ipynb
@@ -288,9 +288,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "grounded\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_upstage import UpstageGroundednessCheck\n",
     "\n",
@@ -298,11 +306,36 @@
     "\n",
     "request_input = {\n",
     "    \"context\": \"삼성전자는 연결 기준으로 매출 74.07조원, 영업이익 10.44조원의 2024년 2분기 실적을 발표했다. 전사 매출은 전분기 대비 3% 증가한 74.07조원을 기록했다. DS부문은 메모리 업황 회복으로 전분기 대비 23% 증가하고, SDC는 OLED 판매 호조로 증가했다.\",\n",
-    "    \"answer\": \"삼성SDS의 2024년 2분기 매출은 약 74.07조원이다.\",\n",
+    "    \"answer\": \"삼성전자의 2024년 2분기 매출은 약 74.07조원이다.\",\n",
     "}\n",
     "\n",
     "response = groundedness_check.invoke(request_input)\n",
     "print(response)  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### UpstageEmbeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_upstage import UpstageEmbeddings\n",
+    "\n",
+    "embeddings = UpstageEmbeddings(model=\"solar-embedding-1-large\")\n",
+    "doc_result = embeddings.embed_documents(\n",
+    "    [\"Sung is a professor.\", \"This is another document\"]\n",
+    ")\n",
+    "print(doc_result)\n",
+    "\n",
+    "query_result = embeddings.embed_query(\"What does Sung do?\")\n",
+    "print(query_result)"
    ]
   }
  ],
