--- a/src/mylangchain_app/00Basic/006_Gemini활용.ipynb
+++ b/src/mylangchain_app/00Basic/006_Gemini활용.ipynb
@@ -41,8 +41,8 @@
     "\n",
     "# 모델 초기화\n",
     "llm = ChatGoogleGenerativeAI(\n",
-    "    #model=\"gemini-1.5-flash\",  # 또는 \"gemini-pro-vision\"\n",
-    "    model=\"gemini-2.5-pro\"\n",
+    "    #model=\"gemini-1.5-flash\",\n",
+    "    model=\"gemini-2.5-pro\",\n",
     "    temperature=0.3    \n",
     ")\n",
     "\n",
@@ -68,7 +68,7 @@
     "#### Gemini 모델별 특징\n",
     "\n",
     "* gemini-1.5-flash: 빠른 응답, 일반적인 작업에 적합\n",
-    "* gemini-1.5-pro: 더 정확하고 복잡한 추론 작업\n",
+    "* gemini-2.5-pro: 더 정확하고 복잡한 추론 작업\n",
     "* gemini-pro-vision: 이미지 처리 및 멀티모달 작업"
    ]
   },
@@ -89,7 +89,8 @@
     "\n",
     "# 기본 모델 설정\n",
     "llm = ChatGoogleGenerativeAI(\n",
-    "    model=\"gemini-1.5-flash\",\n",
+    "    #model=\"gemini-1.5-flash\",\n",
+    "    model=\"gemini-2.5-pro\",\n",
     "    temperature=0.7\n",
     ")\n",
     "\n",
@@ -126,9 +127,7 @@
     "response2 = json_chain.invoke({\"company_info\": company_text})\n",
     "print(\"JSON 결과:\", response2)\n",
     "\n",
-    "print(\"\\n\" + \"=\" * 50)\n",
-    "print(\"예제 3: 번역 체인\")\n",
-    "print(\"=\" * 50)\n"
+    "\n"
    ]
   },
   {
@@ -138,6 +137,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "print(\"\\n\" + \"=\" * 50)\n",
+    "print(\"예제 3: 번역 체인\")\n",
+    "print(\"=\" * 50)\n",
     "\n",
     "translate_prompt = ChatPromptTemplate.from_template(\n",
     "    \"다음 텍스트를 {target_language}로 번역하세요: {text}\"\n",
