--- a/src/mylangchain_app/01RAG/010_RAG_Pipeline_0Basic.ipynb
+++ b/src/mylangchain_app/01RAG/010_RAG_Pipeline_0Basic.ipynb
@@ -54,10 +54,20 @@
     "import os\n",
     "\n",
     "# .env 파일을 불러와서 환경 변수로 설정\n",
-    "load_dotenv(dotenv_path='../.env')\n",
+    "load_dotenv()\n",
     "\n",
     "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
     "print(OPENAI_API_KEY[:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b59379f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "EMBEDDING_MODEL_NAME = \"bge-m3:latest\""
    ]
   },
   {
@@ -95,7 +105,7 @@
     "#print(split_docs)\n",
     "\n",
     "# 3️. Indexing (벡터 저장)\n",
-    "embeddings_model = OllamaEmbeddings(model=\"qwen2.5:1.5b\")\n",
+    "embeddings_model = OllamaEmbeddings(model=EMBEDDING_MODEL_NAME)\n",
     "vectorstore = FAISS.from_documents(\n",
     "    documents=split_docs, \n",
     "    embedding=embeddings_model\n",
@@ -173,7 +183,7 @@
     "split_docs = splitter.split_documents(documents)\n",
     "\n",
     "# 3. 인덱싱 (벡터 저장)\n",
-    "embeddings_model = OllamaEmbeddings(model=\"qwen2.5:1.5b\")\n",
+    "embeddings_model = OllamaEmbeddings(model=EMBEDDING_MODEL_NAME)\n",
     "\n",
     "vectorstore = FAISS.from_documents(\n",
     "    documents=split_docs, \n",
@@ -282,7 +292,7 @@
     "    print(f\"Chunk {i+1} ({len(doc.page_content)}글자): {doc.page_content[:100]}...\")\n",
     "\n",
     "# 3. Indexing\n",
-    "embeddings_model = OllamaEmbeddings(model=\"qwen2.5:1.5b\")\n",
+    "embeddings_model = OllamaEmbeddings(model=EMBEDDING_MODEL_NAME)\n",
     "\n",
     "vectorstore = FAISS.from_documents(\n",
     "    documents=split_docs, \n",
@@ -388,7 +398,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "chatbot-0lCeHk3W-py3.12",
+   "display_name": "mylangchain-app-SBe-Yh6W-py3.12",
    "language": "python",
    "name": "python3"
   },
