--- a/src/mylangchain_app/01RAG/010_RAG_Pipeline_0Basic.ipynb
+++ b/src/mylangchain_app/01RAG/010_RAG_Pipeline_0Basic.ipynb
@@ -43,12 +43,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b76f68a8-4745-4377-8057-6090b87377d1",
    "metadata": {
     "id": "b76f68a8-4745-4377-8057-6090b87377d1"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gsk_f\n"
+     ]
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv\n",
     "import os\n",
@@ -62,12 +70,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b59379f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'bge-m3:latest'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "EMBEDDING_MODEL_NAME = \"bge-m3:latest\""
+    "EMBEDDING_MODEL_NAME = \"bge-m3:latest\"\n",
+    "EMBEDDING_MODEL_NAME"
    ]
   },
   {
@@ -98,6 +118,18 @@
     "# 1. Load Data\n",
     "loader = TextLoader(\"../data/taxinfo.txt\", encoding=\"utf-8\")\n",
     "documents = loader.load()\n",
+    "print(type(documents))\n",
+    "print(type(documents[0]))\n",
+    "print(documents[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a2bf91d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# 2️. Text Split\n",
     "splitter = RecursiveCharacterTextSplitter(chunk_size=500, chunk_overlap=50)\n",
