--- a/src/mylangchain_app/01RAG/010_RAG_Pipeline_0Basic.ipynb
+++ b/src/mylangchain_app/01RAG/010_RAG_Pipeline_0Basic.ipynb
@@ -102,10 +102,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "cefe286d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'> 1\n",
+      "<class 'langchain_core.documents.base.Document'>\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_openai import ChatOpenAI,OpenAIEmbeddings\n",
     "from langchain.vectorstores import FAISS\n",
@@ -118,9 +127,10 @@
     "# 1. Load Data\n",
     "loader = TextLoader(\"../data/taxinfo.txt\", encoding=\"utf-8\")\n",
     "documents = loader.load()\n",
-    "print(type(documents))\n",
+    "\n",
+    "print(type(documents), len(documents)) #[Documentm, Document]\n",
     "print(type(documents[0]))\n",
-    "print(documents[0])"
+    "#print(documents[0])"
    ]
   },
   {
@@ -134,7 +144,18 @@
     "# 2️. Text Split\n",
     "splitter = RecursiveCharacterTextSplitter(chunk_size=500, chunk_overlap=50)\n",
     "split_docs = splitter.split_documents(documents)\n",
-    "#print(split_docs)\n",
+    "\n",
+    "print(len(split_docs))\n",
+    "print(split_docs)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5501399d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# 3️. Indexing (벡터 저장)\n",
     "embeddings_model = OllamaEmbeddings(model=EMBEDDING_MODEL_NAME)\n",
