--- a/src/mylangchain_app/01RAG/010_RAG_Pipeline_0Basic.ipynb
+++ b/src/mylangchain_app/01RAG/010_RAG_Pipeline_0Basic.ipynb
@@ -145,13 +145,15 @@
     "splitter = RecursiveCharacterTextSplitter(chunk_size=500, chunk_overlap=50)\n",
     "split_docs = splitter.split_documents(documents)\n",
     "\n",
-    "print(len(split_docs))\n",
-    "print(split_docs)\n"
+    "print(len(split_docs), type(split_docs))\n",
+    "print(split_docs[0])\n",
+    "print('두번째 Document ====================')\n",
+    "print(split_docs[1])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "5501399d",
    "metadata": {},
    "outputs": [],
@@ -159,6 +161,7 @@
     "\n",
     "# 3️. Indexing (벡터 저장)\n",
     "embeddings_model = OllamaEmbeddings(model=EMBEDDING_MODEL_NAME)\n",
+    "\n",
     "vectorstore = FAISS.from_documents(\n",
     "    documents=split_docs, \n",
     "    embedding=embeddings_model\n",
@@ -166,13 +169,48 @@
     "#vectorstore = FAISS.from_documents(split_docs, OpenAIEmbeddings())\n",
     "\n",
     "# 로컬 파일로 저장\n",
-    "vectorstore.save_local(\"faiss_index\")\n",
+    "vectorstore.save_local(\"faiss_index\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "969466b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'langchain_core.vectorstores.base.VectorStoreRetriever'>\n",
+      "<class 'list'> 6\n",
+      "<class 'langchain_core.documents.base.Document'>\n",
+      "page_content='제12조(비과세소득) 다음 각 호의 소득에 대해서는 소득세를 과세하지 아니한다. <개정 2010. 12. 27., 2011. 7. 25., 2011. 9. 15., 2012. 2. 1., 2013. 1. 1., 2013. 3. 22., 2014. 1. 1., 2014. 3. 18., 2014. 12. 23., 2015. 12. 15., 2016. 12. 20., 2018. 3. 20., 2018. 12. 31., 2019. 12. 10., 2019. 12. 31., 2020. 6. 9., 2020. 12. 29., 2022. 8. 12., 2022. 12. 31., 2023. 8. 8., 2023. 12. 31.>\n",
+      "1. 「공익신탁법」에 따른 공익신탁의 이익\n",
+      "2. 사업소득 중 다음 각 목의 어느 하나에 해당하는 소득\n",
+      "    가. 논ㆍ밭을 작물 생산에 이용하게 함으로써 발생하는 소득' metadata={'source': '../data/taxinfo.txt'}\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "# 4️. Retrieval (유사 문서 검색) k: 질의와 가장 유사한 문서(청크) 6개를 찾아 반환하기\n",
     "retriever = vectorstore.as_retriever(search_kwargs={\"k\": 6})\n",
+    "print(type(retriever))\n",
     "# **질문(쿼리)**에 대해 유사한 문서를 검색하는 역할\n",
     "retrieved_docs = retriever.invoke(\"소득세법에서 비과세소득에 해당하는 소득은 무엇인가요?\")\n",
-    "#print(retrieved_docs)\n",
+    "print(type(retrieved_docs), len(retrieved_docs))\n",
+    "print(type(retrieved_docs[0]))\n",
+    "print(retrieved_docs[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b621c01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# 5️. Generation (LLM 응답 생성)\n",
     "#llm = ChatOpenAI(model=\"gpt-4o-mini\")\n",
