--- a/src/mylangchain_app/01RAG/010_RAG_Pipeline_0Basic.ipynb
+++ b/src/mylangchain_app/01RAG/010_RAG_Pipeline_0Basic.ipynb
@@ -43,20 +43,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b76f68a8-4745-4377-8057-6090b87377d1",
    "metadata": {
     "id": "b76f68a8-4745-4377-8057-6090b87377d1"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gsk_f\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "import os\n",
@@ -70,21 +62,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b59379f3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'bge-m3:latest'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "EMBEDDING_MODEL_NAME = \"bge-m3:latest\"\n",
     "EMBEDDING_MODEL_NAME"
@@ -102,19 +83,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "cefe286d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'list'> 1\n",
-      "<class 'langchain_core.documents.base.Document'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain_openai import ChatOpenAI,OpenAIEmbeddings\n",
     "from langchain.vectorstores import FAISS\n",
@@ -153,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "5501399d",
    "metadata": {},
    "outputs": [],
@@ -174,24 +146,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "969466b5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'langchain_core.vectorstores.base.VectorStoreRetriever'>\n",
-      "<class 'list'> 6\n",
-      "<class 'langchain_core.documents.base.Document'>\n",
-      "page_content='제12조(비과세소득) 다음 각 호의 소득에 대해서는 소득세를 과세하지 아니한다. <개정 2010. 12. 27., 2011. 7. 25., 2011. 9. 15., 2012. 2. 1., 2013. 1. 1., 2013. 3. 22., 2014. 1. 1., 2014. 3. 18., 2014. 12. 23., 2015. 12. 15., 2016. 12. 20., 2018. 3. 20., 2018. 12. 31., 2019. 12. 10., 2019. 12. 31., 2020. 6. 9., 2020. 12. 29., 2022. 8. 12., 2022. 12. 31., 2023. 8. 8., 2023. 12. 31.>\n",
-      "1. 「공익신탁법」에 따른 공익신탁의 이익\n",
-      "2. 사업소득 중 다음 각 목의 어느 하나에 해당하는 소득\n",
-      "    가. 논ㆍ밭을 작물 생산에 이용하게 함으로써 발생하는 소득' metadata={'source': '../data/taxinfo.txt'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# 4️. Retrieval (유사 문서 검색) k: 질의와 가장 유사한 문서(청크) 6개를 찾아 반환하기\n",
@@ -220,8 +178,18 @@
     "    model=\"moonshotai/kimi-k2-instruct-0905\",\n",
     "    temperature=0\n",
     ")\n",
+    "\n",
     "context = \"\\n\\n\".join([doc.page_content for doc in retrieved_docs])\n",
-    "#print(context)\n",
+    "print(context)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff86d37a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "response_context = llm.invoke(f\"소득세법에서 비과세소득에 해당하는 소득은 무엇인가요? 관련 정보: {context}\")\n",
     "print('context 적용한 결과')\n",
@@ -287,7 +255,7 @@
     "# 4. 검색 개선\n",
     "\"\"\"\n",
     "    최대 다양성 검색(Maximum Marginal Relevance, MMR)\n",
-    "    MMR은 유사도가 높은 문서를 찾는 것을 넘어, 유사도와 다양성이라는 두 가지 기준을 모두 고려험\n",
+    "    MMR은 유사도가 높은 문서를 찾는 것을 넘어, 유사도와 다양성이라는 두 가지 기준을 모두 고려함\n",
     "    - search_type=\"mmr\": 검색 방식을 MMR로 지정합니다.\n",
     "    - fetch_k: 일차적으로 질의와 유사한 문서 10개를 벡터 저장소에서 가져옵니다.\n",
     "    - k: fetch_k로 가져온 10개의 문서 중에서 최종적으로 6개를 선택합니다. 6개를 선택할 때, MMR 알고리즘은 다음 두 가지를 고려함\n",
@@ -448,7 +416,16 @@
     "print(\"\\n\" + \"=\"*50)\n",
     "print(\"=== 기존 프롬프트로 답변 ===\")\n",
     "response_simple = llm.invoke(simple_prompt)\n",
-    "pprint(response_simple.content)\n",
+    "pprint(response_simple.content)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "373f0c68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# 추가 개선: 다른 검색 방식 시도\n",
     "print(\"\\n\" + \"=\"*50)\n",
