--- a/src/mylangchain_app/01RAG/010_RAG_Pipeline_1DocumentLoader_pdf_Upstage.ipynb
+++ b/src/mylangchain_app/01RAG/010_RAG_Pipeline_1DocumentLoader_pdf_Upstage.ipynb
@@ -27,7 +27,8 @@
     }
    ],
    "source": [
-    "# poetry add pypdf"
+    "# poetry add pypdf=\">=4.2.0,<5.0.0\"\n",
+    "# poetry add langchain-upstage"
    ]
   },
   {
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "dfd95056",
    "metadata": {},
    "outputs": [
@@ -48,7 +49,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gsk_H\n"
+      "NY\n"
      ]
     }
    ],
@@ -59,97 +60,74 @@
     "# .env 파일을 불러와서 환경 변수로 설정\n",
     "load_dotenv()\n",
     "\n",
-    "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
-    "print(OPENAI_API_KEY[:5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "337f869f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import json\n",
-    "from langchain_community.document_loaders import PyPDFLoader\n",
-    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
-    "\n",
-    "# PDF 파일 경로 설정\n",
-    "pdf_filepath = '../data/tutorial-korean.pdf'\n",
-    "\n",
-    "# 파일 존재 여부 확인 (파일이 없으면 오류 발생)\n",
-    "if not os.path.exists(pdf_filepath):\n",
-    "    raise FileNotFoundError(f\"파일을 찾을 수 없습니다: {pdf_filepath}\")\n",
-    "\n",
-    "try:\n",
-    "    # 1. PDF 파일 로드\n",
-    "    loader = PyPDFLoader(pdf_filepath)  # PDF 파일을 로드할 객체 생성\n",
-    "    docs = loader.load()  # 문서를 전체 로드\n",
-    "\n",
-    "    # 총 문서 개수 출력\n",
-    "    print(f\"총 {len(docs)}개의 문서가 로드 되었습니다.\")\n",
-    "\n",
-    "    #  첫 번째 문서의 메타데이터 출력\n",
-    "    print(\"첫 번째 문서 메타데이터:\")\n",
-    "    print(json.dumps(docs[0].metadata, indent=2, ensure_ascii=False))\n",
-    "\n",
-    "    # 특정 인덱스(10번째) 문서의 내용 확인 (존재할 경우)\n",
-    "    if len(docs) > 10:\n",
-    "        print(\"\\n10번째 문서 내용:\", type(docs[10]))\n",
-    "        print(docs[10])  # 10번째 문서 출력\n",
-    "\n",
-    "    #  2. 텍스트 분할 (200자 단위, 중첩 없음)\n",
-    "    text_splitter = RecursiveCharacterTextSplitter(chunk_size=200, chunk_overlap=0)\n",
-    "    split_docs = loader.load_and_split(text_splitter=text_splitter)  # 분할된 문서 로드\n",
-    "\n",
-    "    # 분할된 문서 개수 출력\n",
-    "    print(f\"\\n분할된 문서의 개수: {len(split_docs)} 타입: {type(split_docs)}\")\n",
-    "\n",
-    "    # 10번째 분할된 문서 내용 출력 (존재할 경우)\n",
-    "    if len(split_docs) > 10:\n",
-    "        print(\"\\n10번째 분할된 문서:\")\n",
-    "        print(split_docs[10])\n",
-    "\n",
-    "    # 3. Lazy Load 방식으로 문서 로드\n",
-    "    print(\"\\nLazy Load 방식으로 문서 로드:\")\n",
-    "    for i, doc in enumerate(loader.lazy_load()):\n",
-    "        if i < 5:  # 너무 많은 출력 방지 (예제: 처음 5개만 출력)\n",
-    "            print(json.dumps(doc.metadata, indent=2, ensure_ascii=False))\n",
-    "\n",
-    "except Exception as e:\n",
-    "    # 오류 발생 시 메시지 출력\n",
-    "    print(f\"오류 발생: {e}\")\n"
+    "UPSTAGE_API_KEY = os.getenv(\"UPSTAGE_API_KEY\")\n",
+    "print(UPSTAGE_API_KEY[30:])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e7c50bf6",
+   "id": "2f34b806",
    "metadata": {},
    "source": [
-    "#### OllamaEmbeddings\n",
-    "* bge-m3:latest 모델"
+    "#### Upstage 를 사용한 RAG\n",
+    "* ChatUpstage\n",
+    "* UpstageEmbeddings\n",
+    "* UpstageDocumentParseLoader"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f5a1f91",
+   "id": "a675b9cd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==> 1. 문서 로딩 → PDF 읽기...\n",
+      "  총 39페이지 로드 완료\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_community.document_loaders import PyPDFLoader\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "from langchain_community.vectorstores import FAISS\n",
-    "from langchain_openai import OpenAIEmbeddings, ChatOpenAI\n",
+    "from langchain_upstage import ChatUpstage\n",
     "from langchain.chains import RetrievalQA\n",
     "from langchain.prompts import PromptTemplate\n",
-    "from langchain_ollama import OllamaEmbeddings\n",
+    "from langchain_upstage import UpstageEmbeddings\n",
     "\n",
     "print(\"==> 1. 문서 로딩 → PDF 읽기...\")\n",
+    "file_path = \"../data/tutorial-korean.pdf\"\n",
     "loader = PyPDFLoader('../data/tutorial-korean.pdf')\n",
     "documents = loader.load()\n",
-    "print(f\"  총 {len(documents)}페이지 로드 완료\")\n",
+    "print(f\"  총 {len(documents)}페이지 로드 완료\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "fa00c954",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==> 2. 문서 분할 → 작은 청크로 나누기\n",
+      "  66개 청크 생성 완료\n",
+      "  평균 청크 길이: 688자\n",
+      "==> 3. 벡터화 → 임베딩으로 변환\n",
+      "==> 4. 저장 → FAISS 벡터스토어에 저장\n",
+      " FAISS 벡터스토어 생성 완료 (66개 벡터)\n",
+      "===> 5. 검색 → 질문과 유사한 문서 찾기\n",
+      " Retriever 설정 완료\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "print(\"==> 2. 문서 분할 → 작은 청크로 나누기\")\n",
     "text_splitter = RecursiveCharacterTextSplitter(\n",
@@ -163,36 +141,64 @@
     "print(f\"  평균 청크 길이: {sum(len(chunk.page_content) for chunk in chunks) / len(chunks):.0f}자\")\n",
     "\n",
     "print(\"==> 3. 벡터화 → 임베딩으로 변환\")\n",
-    "# embeddings = OpenAIEmbeddings(\n",
-    "#     model=\"text-embedding-3-small\",\n",
-    "#     dimensions=1536\n",
-    "# )\n",
-    "\n",
-    "embeddings = OllamaEmbeddings(model=\"bge-m3:latest\")\n",
+    "embeddings = UpstageEmbeddings(model=\"solar-embedding-1-large\")\n",
     "\n",
     "print(\"==> 4. 저장 → FAISS 벡터스토어에 저장\")\n",
     "vectorstore = FAISS.from_documents(chunks, embeddings)\n",
     "print(f\" FAISS 벡터스토어 생성 완료 ({len(chunks)}개 벡터)\")\n",
+    "# 로컬 파일로 저장\n",
+    "vectorstore.save_local(\"faiss_index_upstage\")\n",
     "\n",
     "print(\"===> 5. 검색 → 질문과 유사한 문서 찾기\")\n",
     "retriever = vectorstore.as_retriever(\n",
     "    search_type=\"similarity\",\n",
     "    search_kwargs={\"k\": 6}  # 상위 6개 관련 문서 검색\n",
     ")\n",
-    "print(\" Retriever 설정 완료\")\n",
+    "print(\" Retriever 설정 완료\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "edf84836",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===> 6. 생성 → LLM으로 답변 생성\n",
+      "client=<openai.resources.chat.completions.completions.Completions object at 0x000002DCC8114620> async_client=<openai.resources.chat.completions.completions.AsyncCompletions object at 0x000002DCC8116F00> model_name='solar-pro' temperature=0.5 model_kwargs={} upstage_api_key=SecretStr('**********') upstage_api_base='https://api.upstage.ai/v1'\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "print(\"===> 6. 생성 → LLM으로 답변 생성\")\n",
-    "# llm = ChatOpenAI(\n",
-    "#     model=\"gpt-4o-mini\",\n",
-    "#     temperature=0.1,\n",
-    "#     max_tokens=1500\n",
-    "# )\n",
-    "llm = ChatOpenAI(\n",
-    "    base_url=\"https://api.groq.com/openai/v1\",\n",
-    "    #model=\"meta-llama/llama-4-scout-17b-16e-instruct\",\n",
-    "    model=\"moonshotai/kimi-k2-instruct-0905\",\n",
-    "    temperature=0\n",
-    ")\n",
+    "llm = ChatUpstage(\n",
+    "        model=\"solar-pro\",\n",
+    "        base_url=\"https://api.upstage.ai/v1\",\n",
+    "        temperature=0.5\n",
+    "    )\n",
+    "print(llm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "331d4e8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 프롬프트 설정 완료\n",
+      "input_variables=['context', 'question'] input_types={} partial_variables={} template='\\n당신은 BlueJ 프로그래밍 환경 전문가입니다. \\n아래 문서 내용을 바탕으로 정확하고 친절한 답변을 제공해주세요.\\n\\n문서 내용:\\n{context}\\n\\n질문: {question}\\n\\n답변 규칙:\\n1. 문서 내용만을 근거로 답변하세요\\n2. 단계별 설명이 필요하면 순서대로 작성하세요  \\n3. 구체적인 메뉴명, 버튼명을 포함하세요\\n4. 문서에 없는 정보는 \"문서에서 찾을 수 없습니다\"라고 하세요\\n\\n답변:'\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "# 한국어 최적화 프롬프트\n",
     "prompt_template = \"\"\"\n",
@@ -217,6 +223,16 @@
     "    input_variables=[\"context\", \"question\"]\n",
     ")\n",
     "print(\" 프롬프트 설정 완료\")\n",
+    "print(prompt)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9563fe29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# ===================================\n",
     "# 7. QA 체인 생성\n",
@@ -271,6 +287,42 @@
     "        print(f\"   {j}. 페이지 {page}: {preview}...\")\n",
     "    \n",
     "    print(\"\\n\" + \"-\" * 40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "07c8c269",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "grounded\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_upstage import UpstageGroundednessCheck\n",
+    "\n",
+    "groundedness_check = UpstageGroundednessCheck()\n",
+    "\n",
+    "question = \"BlueJ에서 객체를 생성하는 방법은 무엇인가요?\"\n",
+    "\n",
+    "retrieved_docs = retriever.invoke(question)\n",
+    "context = \"\\n\\n\".join([doc.page_content for doc in retrieved_docs])\n",
+    "#print(context)\n",
+    "\n",
+    "response = llm.invoke(f\"{question} 관련 정보: {context}\")\n",
+    "\n",
+    "request_input = {\n",
+    "    \"context\": context,\n",
+    "    \"answer\": response.content\n",
+    "}\n",
+    "\n",
+    "response = groundedness_check.invoke(request_input)\n",
+    "print(response)  "
    ]
   },
   {
