--- a/src/mylangchain_app/01RAG/010_RAG_Pipeline_1DocumentLoader_pdf.ipynb
+++ b/src/mylangchain_app/01RAG/010_RAG_Pipeline_1DocumentLoader_pdf.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "dfd95056",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gsk_H\n"
+      "gsk_f\n"
      ]
     }
    ],
@@ -87,7 +87,7 @@
     "    loader = PyPDFLoader(pdf_filepath)  # PDF 파일을 로드할 객체 생성\n",
     "    docs = loader.load()  # 문서를 전체 로드\n",
     "\n",
-    "    # 총 문서 개수 출력\n",
+    "    # 총 문서 개수 출력 [Document,Document]\n",
     "    print(f\"총 {len(docs)}개의 문서가 로드 되었습니다.\")\n",
     "\n",
     "    #  첫 번째 문서의 메타데이터 출력\n",
@@ -173,8 +173,10 @@
     "print(\"==> 4. 저장 → FAISS 벡터스토어에 저장\")\n",
     "vectorstore = FAISS.from_documents(chunks, embeddings)\n",
     "print(f\" FAISS 벡터스토어 생성 완료 ({len(chunks)}개 벡터)\")\n",
+    "vectorstore.save_local(\"faiss_db\")\n",
     "\n",
     "print(\"===> 5. 검색 → 질문과 유사한 문서 찾기\")\n",
+    "# VectorStoreRetriever\n",
     "retriever = vectorstore.as_retriever(\n",
     "    search_type=\"similarity\",\n",
     "    search_kwargs={\"k\": 6}  # 상위 6개 관련 문서 검색\n",
@@ -219,7 +221,7 @@
     "print(\" 프롬프트 설정 완료\")\n",
     "\n",
     "# ===================================\n",
-    "# 7. QA 체인 생성\n",
+    "# 7. QA 체인 생성 Retriever + LLM을 체인으로 연결\n",
     "# ===================================\n",
     "print(\"\\n ===> 7.  QA 체인 생성...\")\n",
     "qa_chain = RetrievalQA.from_chain_type(\n",
@@ -230,6 +232,19 @@
     "    return_source_documents=True\n",
     ")\n",
     "print(\"  RAG 파이프라인 구축 완료!\")\n",
+    "\n",
+    "question = \"BlueJ에서 객체를 생성하는 방법은 무엇인가요?\"\n",
+    "result = qa_chain.invoke({\"query\": question})\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "884754ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# ===================================\n",
     "# 8. 테스트 질문들\n",
@@ -291,7 +306,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "chatbot-0lCeHk3W-py3.12",
+   "display_name": "mylangchain-app-SBe-Yh6W-py3.12",
    "language": "python",
    "name": "python3"
   },
