--- a/src/mylangchain_app/01RAG/010_RAG_Pipeline_1DocumentLoader_pdf.ipynb
+++ b/src/mylangchain_app/01RAG/010_RAG_Pipeline_1DocumentLoader_pdf.ipynb
@@ -17,15 +17,7 @@
    "metadata": {
     "id": "4cd87a33-0a37-461b-8f37-3c142e60b1f6"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# poetry add pypdf"
    ]
@@ -40,18 +32,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "dfd95056",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gsk_f\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "import os\n",
@@ -221,7 +205,7 @@
     "print(\" 프롬프트 설정 완료\")\n",
     "\n",
     "# ===================================\n",
-    "# 7. QA 체인 생성 Retriever + LLM을 체인으로 연결\n",
+    "# 7. QA 체인 생성 Retriever + Prompt +LLM을 체인으로 연결\n",
     "# ===================================\n",
     "print(\"\\n ===> 7.  QA 체인 생성...\")\n",
     "qa_chain = RetrievalQA.from_chain_type(\n",
@@ -235,7 +219,20 @@
     "\n",
     "question = \"BlueJ에서 객체를 생성하는 방법은 무엇인가요?\"\n",
     "result = qa_chain.invoke({\"query\": question})\n",
+    "\n",
     "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8891d4f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pprint import pprint\n",
+    "\n",
+    "pprint(result)"
    ]
   },
   {
