--- a/src/mylangchain_app/01RAG/010_RAG_Pipeline_4Chroma_FAISS.ipynb
+++ b/src/mylangchain_app/01RAG/010_RAG_Pipeline_4Chroma_FAISS.ipynb
@@ -35,12 +35,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b76f68a8-4745-4377-8057-6090b87377d1",
    "metadata": {
     "id": "b76f68a8-4745-4377-8057-6090b87377d1"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sk\n"
+     ]
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv\n",
     "import os\n",
@@ -170,10 +178,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "218ba88a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\user\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\mylangchain-app-SBe-Yh6W-py3.12\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AI 문서 개수: 6\n",
+      "금융 문서 개수: 5\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -183,7 +208,7 @@
     "from langchain_ollama import OllamaEmbeddings\n",
     "\n",
     "# 2. 벡터 데이터베이스 저장 경로 설정\n",
-    "DB_PATH = \"../db/faiss_db\"\n",
+    "DB_PATH = \"./faiss_db\"\n",
     "\n",
     "# 3. 텍스트 파일을 로드하고 문서를 분할하는 함수 정의\n",
     "def load_and_split_text(file_path, splitter):\n",
@@ -222,10 +247,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f6c371fd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FAISS 데이터베이스 저장 완료!\n",
+      " 저장된 벡터 개수: 11\n",
+      " 벡터 차원: 1024\n",
+      " 인덱스 타입: <class 'faiss.swigfaiss_avx2.IndexFlatL2'>\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# 7. 모든 문서 합치기\n",
@@ -297,10 +333,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4585881f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "==================================================\n",
+      "저장된 FAISS DB 로드 테스트\n",
+      "==================================================\n",
+      "FAISS 데이터베이스 로드 완료!\n",
+      "로드된 벡터 개수: 11\n",
+      "\n",
+      "로드된 DB 검색 결과: Zero-shot Learning (제로샷 학습)\n",
+      "\n",
+      "정의: 특정 태스크에 대한 데이터 없이도 기존 학습된 지식을 활용하여 예측하는 AI 기술.\n",
+      "예시: AI가 새로운 언어를 학습하지 않았지만, 문맥을 기반으로 번역 가능.\n",
+      "연관 키워드: 전이 학습, 일반화 능력, NLP\n",
+      "\n",
+      "Few-shot Learning (퓨샷 학습)\n",
+      "\n",
+      "정의: 적은 양의 데이터로도 새로운 작업을 수행할 수 있도록 하는 학습 방법.\n",
+      "예시: ChatGPT가 몇 개의 예제만으로도 새로운 질문에 적절한 답을 생성함.\n",
+      "연관 키워드: 샘플 효율성, 전이 학습, 메타 학습\n",
+      "\n",
+      "Rei...\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# 12. 저장된 FAISS DB 로드 테스트\n",
@@ -344,10 +407,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "13183274",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "==================================================\n",
+      "유사도 점수와 함께 검색\n",
+      "==================================================\n",
+      "\n",
+      " [Query]: 학습에는 어떤것들이 있나요?\n",
+      "\n",
+      "[Result 1] (Score: 0.8634):\n",
+      "Zero-shot Learning (제로샷 학습)\n",
+      "\n",
+      "정의: 특정 태스크에 대한 데이터 없이도 기존 학습된 지식을 활용하여 예측하는 AI 기술.\n",
+      "예시: AI가 새로운 언어를 학습하지 않았지만, 문맥을 기반으로 번역 가능.\n",
+      "연관 키워드: 전이 학습, 일반화 능력, NLP\n",
+      "\n",
+      "Few-shot Learning (퓨샷 학습)\n",
+      "\n",
+      "정의: 적은 양의 데이터로도 새로운 작업을 수행할 수 있도록 하는 학습 방법.\n",
+      "예시: ChatGPT가 몇 개의 예제만으로도 새로운 질문에 적절한 답을 생성함.\n",
+      "연관 키워드: 샘플 효율성, 전이 학습, 메타 학습\n",
+      "\n",
+      "Reinforcement Learning (강화 학습)\n",
+      "\n",
+      "정의: 보상을 극대화하는 방향으로 행동을 학습하는 AI 기법.\n",
+      "예시: 알파고가 바둑에서 최적의 수를 찾기 위해 강화 학습을 활용.\n",
+      "연관 키워드: 보상 시스템, 정책 학습, 게임 AI\n",
+      "\n",
+      "Prompt Engineering (프롬프트 엔지니어링)\n",
+      "\n",
+      "정의: AI 모델이 원하는 출력을 생성하도록 입력을 최적화하는 ...\n",
+      "\n",
+      "[Result 2] (Score: 0.9780):\n",
+      "Large Language Model (대형 언어 모델, LLM)\n",
+      "\n",
+      "정의: 대량의 텍스트 데이터를 학습한 자연어 처리 모델.\n",
+      "예시: GPT-4, PaLM 등이 대형 언어 모델에 해당.\n",
+      "연관 키워드: 자연어 처리, 트랜스포머, AI 모델\n",
+      "\n",
+      "Vector Database (벡터 데이터베이스)\n",
+      "\n",
+      "정의: 데이터를 벡터 형태로 저장하고 유사도를 기반으로 검색하는 데이터베이스.\n",
+      "예시: ChromaDB를 사용하여 유사 문서를 검색.\n",
+      "연관 키워드: 의미론적 검색, NLP, 임베딩\n",
+      "\n",
+      "Latent Space (잠재 공간)\n",
+      "\n",
+      "정의: 데이터가 저차원 벡터로 변환된 공간으로, 의미적으로 유사한 데이터들이 가까이 위치함.\n",
+      "예시: \"강아지\"와 \"고양이\"가 같은 클러스터에 배치됨.\n",
+      "연관 키워드: 차원 축소, 임베딩, 머신러닝\n",
+      "\n",
+      "Generative AI (생성형 AI)\n",
+      "\n",
+      "정의: 새로운 텍스트, 이미지, 음악 등을 생성하는 AI 기술.\n",
+      "예시: DALL·E가 주어진 텍스트 프롬프트를 기반으로 이미지를 생성.\n",
+      "연관 키워...\n",
+      "\n",
+      "[Result 3] (Score: 0.9970):\n",
+      "Token (토큰)\n",
+      "\n",
+      "정의: 텍스트 데이터를 더 작은 단위(단어, 문자, 문장 등)로 나누는 과정.\n",
+      "예시: \"AI는 혁신적이다\"를 [\"AI\", \"는\", \"혁신적\", \"이다\"]로 분할.\n",
+      "연관 키워드: 토큰화, NLP, 텍스트 전처리\n",
+      "\n",
+      "Transformer (트랜스포머)\n",
+      "\n",
+      "정의: 자연어 처리에서 사용되는 신경망 아키텍처로, 병렬 연산과 장기 의존성 처리가 강점.\n",
+      "예시: GPT, BERT 등의 모델이 트랜스포머 기반으로 동작함.\n",
+      "연관 키워드: 딥러닝, 자기 주의 메커니즘, NLP\n",
+      "\n",
+      "Self-Attention (자기 주의 메커니즘)\n",
+      "\n",
+      "정의: 문장의 모든 단어가 서로에게 가중치를 부여하여 문맥을 이해하는 방식.\n",
+      "예시: \"나는 강아지를 좋아한다\"에서 \"나는\"과 \"좋아한다\"가 강한 연관성을 가짐.\n",
+      "연관 키워드: 트랜스포머, BERT, 문맥 학습\n",
+      "\n",
+      "Fine-Tuning (미세 조정)\n",
+      "\n",
+      "정의: 사전 학습된 모델을 특정 작업에 맞게 추가 학습하는 과정.\n",
+      "예시: GPT 모델을 법률 문서 요약에 맞게 학...\n",
+      "\n",
+      "[Result 4] (Score: 1.0518):\n",
+      "Diffusion Model (확산 모델)\n",
+      "\n",
+      "정의: 이미지 생성 AI에서 노이즈를 점진적으로 제거하며 데이터를 생성하는 기법.\n",
+      "예시: Stable Diffusion이 텍스트에서 이미지를 생성하는 과정.\n",
+      "연관 키워드: 이미지 생성, 딥러닝, 생성 AI\n",
+      "\n",
+      "Hallucination (환각)\n",
+      "\n",
+      "정의: AI가 실제 존재하지 않는 정보나 잘못된 내용을 생성하는 현상.\n",
+      "예시: AI가 가짜 논문을 만들어내는 경우.\n",
+      "연관 키워드: 신뢰성, 모델 평가, 자연어 처리\n",
+      "\n",
+      "RAG (Retrieval-Augmented Generation, 검색 기반 생성)\n",
+      "\n",
+      "정의: LLM이 외부 데이터베이스에서 정보를 검색하여 응답의 정확도를 높이는 기법.\n",
+      "예시: LangChain을 활용한 문서 검색 기반 AI 챗봇.\n",
+      "연관 키워드: 지식 검색, 하이브리드 AI, LangChain\n",
+      "\n",
+      "Multimodal AI (멀티모달 AI)\n",
+      "\n",
+      "정의: 텍스트, 이미지, 오디오 등 여러 유형의 데이터를 동시에 처리하는 AI 기술.\n",
+      "예시: GPT...\n",
+      "\n",
+      "[Result 5] (Score: 1.1032):\n",
+      "Explainable AI (설명 가능한 AI, XAI)\n",
+      "\n",
+      "정의: AI의 의사결정 과정이 사람에게 이해할 수 있도록 설명되는 기술.\n",
+      "예시: AI가 의료 진단을 내릴 때, 왜 그런 결론을 내렸는지 설명함.\n",
+      "연관 키워드: 신뢰성, 모델 해석, AI 윤리\n",
+      "\n",
+      "AGI (Artificial General Intelligence, 범용 인공지능)\n",
+      "\n",
+      "정의: 특정 작업이 아니라 인간처럼 다양한 지적 작업을 수행할 수 있는 AI 개념.\n",
+      "예시: 현재 AI는 특정 작업에 특화된 ANI(특정 인공지능)이지만, 미래에는 AGI 개발이 목표.\n",
+      "연관 키워드: 자율 학습, 강한 AI, 미래 기술...\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# 13. 유사도 점수와 함께 검색\n",
@@ -369,7 +555,7 @@
     "        print(f\" 점수 검색 오류: {e}\")\n",
     "\n",
     "# 점수와 함께 검색 테스트\n",
-    "search_with_score(\"AI 종류는 어떤것들이 있나요?\", k=5)\n"
+    "search_with_score(\"학습에는 어떤것들이 있나요?\", k=5)\n"
    ]
   },
   {
@@ -413,7 +599,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "chatbot-0lCeHk3W-py3.12",
+   "display_name": "mylangchain-app-SBe-Yh6W-py3.12",
    "language": "python",
    "name": "python3"
   },
